Keyboard input linked to enter and input type improved

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
                 android:layout_marginVertical="5dp"
                 android:paddingHorizontal="5dp"
                 android:textSize="16sp"
+                android:imeOptions="actionDone"
                 />
 
             <Button
