--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -69,20 +69,35 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
             android:id="@+id/tools_panel"
             app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
-            >
+            android:layout_height="60dp">
             <Button
-                android:layout_width="40dp"
-                android:layout_height="20dp"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
                 android:text="Line"
-                android:id="@+id/btn_line"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="10sp"
+                android:id="@+id/btLine"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="5dp"
                 />
+            <Button
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="Arc"
+                android:textSize="10sp"
+                android:id="@+id/btArc"
+                app:layout_constraintStart_toEndOf="@+id/btLine"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="5dp"
+                />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
