--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Sketcher">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/myToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="My Toolbar" />
 
 
     <com.example.cnccodegenerator.drawing_surface.DrawingSurface
         android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/sketcher12"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        />
+    <ImageButton
+        android:id="@+id/btnUndo"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:text="Undo"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/myToolbar"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/icon_undo"
+        android:background="#137768"
+        />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
