--- a/app/src/main/res/layout/recycler_sketcher_file_item.xml
+++ b/app/src/main/res/layout/recycler_sketcher_file_item.xml
@@ -7,17 +7,31 @@ android:orientation="vertical"
     android:paddingHorizontal="15dp"
     android:clickable="true"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:scaleType="centerInside"
+            android:src="@mipmap/icon_json"/>
+        <TextView
+            android:id="@+id/fileNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:textSize="16sp"
+            android:text="Pot.json"
+            android:gravity="center"
+            android:layout_marginLeft="3dp"
+            android:textColor="@color/black"
 
-<TextView
-    android:id="@+id/fileNameTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="50dp"
-    android:textSize="16sp"
-    android:text="Pot.json"
-    android:gravity="bottom"
-    android:textColor="@color/black"
+            />
+    </LinearLayout>
 
-    />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
